# ccda-parser

./: .gitignore  CHANGELOG.md  README.md  requirements.txt
.github/workflows/: publish-to-pypi.yml  python-test.yml
pyCCDA/: pyproject.toml  setup.py
pyCCDA/pyCCDA.egg-info/: PKG-INFO  SOURCES.txt
tests/: README.md  test_import.py
